# cpio

./: .cvsignore  .gitignore  ChangeLog  ChangeLog.cvs  Makefile.am  Makefile.in  NEWS  README-alpha  README-hacking  THANKS  TODO  aclocal.m4  autogen.sh  bootstrap  bootstrap.conf  config.h.in  configure  configure.ac  configure.in  copyin.c  copyout.c  copypass.c  cpio.1  defer.c  dirname.c  dstring.c  dstring.h  error.c  extern.h  filemode.c  getopt.c  getopt.h  getopt1.c  global.c  gnulib.modules  idcache.c  index.html  main.c  makefile.pc  makepath.c  (+14 more)
doc/: .cvsignore  .gitignore  Makefile.am  Makefile.in  cpio.1  cpio.info  cpio.texi  gendocs_template  genfile.texi  parse-datetime.texi  stamp-vti  version.texi
gnu/: .gitignore  Makefile.am  Makefile.in  chown.c  error.c  fcntl.in.h  getdtablesize.c  localcharset.c  mbrtowc.c  mktime.c  obstack.c  obstack.h  openat-die.c  openat-proc.c  parse-datetime.c  quotearg.c  xalloc.h
headers/: Makefile.am  Makefile.in  fnmatch.h
intl/: .gitignore  Makefile.in  bindtextdom.c  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  eval-plural.h  explodename.c  export.h  finddomain.c  gettext.c  gettextP.h  gmo.h  hash-string.c  hash-string.h  intl-compat.c  intl-exports.c  l10nflist.c  langprefs.c  loadinfo.h  loadmsgcat.c  localcharset.c  localcharset.h  localealias.c  localename.c  lock.c  lock.h  log.c  ngettext.c  os2compat.c  os2compat.h  osdep.c  plural-exp.c  plural-exp.h  plural.c  printf-args.c  printf-args.h  printf-parse.c  (+15 more)
lib/: .cvsignore  Makefile.am  Makefile.in  Makefile.tmpl  fatal.c  mkdir.c  strdup.c  strerror.c  system.h
m4/: .gitignore  gettext.m4  gnulib-cache.m4  gnulib-comp.m4  printf-posix.m4
paxlib/: .gitignore  Makefile.am
po/: .cvsignore  .gitignore  LINGUAS  Makevars  POTFILES.in  cpio.pot  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po  (+16 more)
po/.reference/: da.po  da.s1  de.po  de.s1  es.po  es.s1  fi.po  fi.s1  fr.po  fr.s1  ga.po  ga.s1  gl.po  gl.s1  hr.po  hr.s1  hu.po  hu.s1  id.po  id.s1  it.po  it.s1  ja.po  ja.s1  ko.s1  nl.po  nl.s1  pl.po  pl.s1  pt_BR.po  pt_BR.s1  ro.po  ro.s1  ru.po  ru.s1  sr.po  sr.s1  sv.po  sv.s1  tr.po  (+9 more)
rmt/: Makefile.in
src/: .cvsignore  Makefile.am  Makefile.in  argmatch.c  copyin.c  copyout.c  copypass.c  cpio.h  cpiohdr.h  defer.c  defer.h  dstring.c  dstring.h  error.c  extern.h  filemode.c  filetypes.h  fnmatch.c  global.c  idcache.c  main.c  makepath.c  mt.c  rmt.c  rmt.h  rtapelib.c  strdup.c  strerror.c  tar.c  tar.h  tarhdr.h  userspec.c  util.c  xmalloc.c  xstrdup.c
tests/: .cvsignore  Makefile.am  Makefile.in  inout.at  interdir.at  package.m4  setstat01.at  setstat02.at  symlink-bad-length.at  symlink-to-stdout.at  symlink.at  testsuite  testsuite.at  version.at
